# S3LightFixes

./: Cargo.toml  Readme.md  actual_Readme.md  lightConfig.toml
.github/workflows/: release.yaml
src/: S3LightFixes.omwaddon  main.rs
