[package]
name = "s3lightfixes"
version = "0.1.0"
edition = "2021"

[dependencies]
palette = "0.7.6"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

[target.'cfg(not(target_os = "android"))'.dependencies]
native-dialog = "0.7"

[dependencies.openmw-cfg]
git = "https://gitlab.com/magicaldave1/openmw-cfg"
branch = "master"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "dev"
features = ["esp"]
